# fastapi

./: .gitignore  Dockerfile  addHerokuBuildPacks.sh  alembic.ini  docker-compose-prod.yml  docker-compose.yml  gunicorn.service  herokudb.creds  login_script.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 17401cbcf448_create_all_tables_try_2.py  c29bf6ce693c_baseline_revision.py  e2fbfabb3449_create_tables.py  ea3410567d34_create_all_tables.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: test_fastapi1.py  test_fastapi1.py.txt  test_users.py
