[tool.poetry]
name = "fastapi1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = {extras = ["all"], version = "^0.71.0"}
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.29"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.7.6"
gunicorn = "^20.1.0"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
